echo_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: echo-ingress
  # annotations:  
  #   kubernetes.io/ingress.class: nginx
  #   certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  # tls:
  # - hosts:
  #   - echo1.arthurbdiniz.com
  #   - echo2.arthurbdiniz.com
  #   secretName: letsencrypt-prod
  rules:
  - host: echo1.arthurbdiniz.com
    http:
      paths:
      - backend:
          serviceName: echo1
          servicePort: 80
  - host: echo2.arthurbdiniz.com
    http:
      paths:
      - backend:
          serviceName: echo2
          servicePort: 80
